made tech circle more responsive, fixed layout shift, improved tech order

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -144,6 +144,14 @@ body.overflow-hidden {
     mask-image: linear-gradient(to bottom, black 0%, transparent 100%);
 }
 
+.tech-icon {
+    --angle: calc(2 * 3.14159 * var(--index) / var(--total));
+    --radius: calc(var(--container-size) / 2);
+    transform: translate(-50%, -50%) rotate(calc(var(--angle) * 1rad))
+        translateY(calc(-1 * var(--radius)))
+        rotate(calc(-1 * var(--angle) * 1rad));
+}
+
 /* Webkit browsers (Chrome, Safari, newer versions of Edge) */
 ::-webkit-scrollbar {
     width: 10px;
